
[project]
name = "slim"
version = "0.4.0"
description = "Sea Lice Simulator"
readme = "README.md"
license = "MIT"
license-files = "LICENSE"
requires-python = ">=3.12"
keywords = ["sea-lice", "salmon", "evolution", "treatment", "resistance"]
authors = [
  {name = "Enrico Trombetta", email = ""},
  {name = "Jessica Enright", email = "jessica.enright@glasgow.ac.uk"},
  {name = "Anthony O' Hare"}, {email = "anthony.ohare@stir.ac.uk"},
]
maintainers = [
  {name = "Anthony O' Hare"}, {email = "anthony.ohare@stir.ac.uk"}
]
dependencies = [
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorcet~=3.1.0",
    "convertbng~=0.7.5",
    "farama-notifications==0.0.4",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "gymnasium==1.1.1",
    "idna==3.10",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "llvmlite==0.44.0",
    "lz4==4.4.4",
    "matplotlib~=3.10.1",
    "msgpack==1.1.0",
    "mypy-extensions==1.0.0",
    "numba==0.61.0",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandas-stubs~=2.2.3",
    "pettingzoo==1.24.3",
    "protobuf==6.31.1",
    "pyarrow==19.0.1",
    "pyqt5~=5.15.11",
    "pyqtgraph~=0.13.7",
    "python-dateutil==2.9.0.post0",
    "pytype>=2024.10.11",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "qtconsole~=5.6.1",
    "ray==2.44.1",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.24.0",
    "scipy~=1.15.2",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "tool>=0.8.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]

[project.urls]
Homepage = "https://github.com/resistance-modelling/slim"
Documentation = "https://slim.readthedocs.io/en/stable/getting-started.html"

[project.optional-dependencies]
gui = ["qtconsole~=5.6.1", "pyqt5~=5.15.11"]
